# cy-ros-pkg

./: README.md
gige_camera/: CMakeLists.txt  package.xml
gige_camera/cfg/: Flir.cfg
gige_camera/cfg/cpp/gige_camera/: FlirConfig.h
gige_camera/include/gige/: gige.h
gige_camera/src/gige_camera/cfg/: FlirConfig.py
gige_camera/src/libgige/: gige.cpp
gige_camera/src/nodes/: flir_camera_node.cpp
thermal_image_proc/: CMakeLists.txt  package.xml
thermal_image_proc/cfg/: Flir.cfg
thermal_image_proc/src/: thermal_image_proc.cpp
